--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Eloquent Javascript Practice</title>
 </head>
 <body>
-    <script src="assets/main.js"></script>
+    <script src="assets/cap2.js"></script>
 </body>
 </html>
